[IMPL] docsAPI wallet
